<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <ProgressBar
        android:id="@+id/pb_detail_loading"
        android:layout_width="42sp"
        android:layout_height="42sp"
        android:layout_gravity="center_horizontal|center_vertical"/>
    <TextView
        android:id="@+id/tv_detail_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:padding="16dp"
        android:textSize="18sp"
        android:visibility="invisible"/>
    <ScrollView
        android:id="@+id/sv_detail_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <ImageView
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/backdrop_placeholder"
                android:id="@+id/iv_detail_backdrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="@string/backdrop_image"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:visibility="visible"
                android:layout_width="0dp"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_detail_title"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="#FFFFFF"
                app:layout_constraintRight_toRightOf="@+id/iv_detail_backdrop"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_detail_backdrop"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/iv_detail_poster"
                android:layout_marginLeft="8dp"
                android:shadowColor="#333333"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="5"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="186dp"
                app:srcCompat="@drawable/poster_placeholder"
                android:contentDescription="@string/poster_image"
                android:id="@+id/iv_detail_poster"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toTopOf="@+id/tv_detail_title" />


            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:srcCompat="@drawable/duration_icon"
                android:contentDescription="@string/clock_icon"
                android:id="@+id/imageView6"
                android:cropToPadding="false"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toRightOf="@+id/iv_detail_poster"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_detail_backdrop" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_detail_runtime"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6"
                app:layout_constraintLeft_toRightOf="@+id/imageView6"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:srcCompat="@drawable/rating_icon"
                android:contentDescription="@string/star_icon"
                android:id="@+id/imageView7"
                app:layout_constraintLeft_toLeftOf="@+id/imageView6"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_runtime" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_detail_vote_average"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_runtime"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toRightOf="@+id/imageView7"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_detail_genres"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toRightOf="@+id/iv_detail_poster"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_vote_average" />

            <View
                android:id="@+id/v_seperator"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#eaeaea"
                app:layout_constraintTop_toBottomOf="@+id/iv_detail_poster"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_detail_overview"
                app:layout_constraintTop_toTopOf="@+id/v_seperator"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" />

            <View
                android:id="@+id/v_seperator_2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#eaeaea"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_detail_budget_label"
                android:textStyle="bold"
                android:text="@string/budget_label"
                app:layout_constraintTop_toBottomOf="@+id/v_seperator_2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv_detail_budget"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_detail_budget"
                app:layout_constraintTop_toBottomOf="@+id/v_seperator_2"
                app:layout_constraintLeft_toRightOf="@+id/tv_detail_budget_label"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_detail_release_date_label"
                android:textStyle="bold"
                android:text="@string/release_date_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_budget"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv_detail_release_date"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_detail_release_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_budget"
                app:layout_constraintLeft_toRightOf="@+id/tv_detail_release_date_label"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>